--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 nav a{
     font-size: 24px;
     font-weight: 500;
@@ -33,21 +34,13 @@ margin-left: 250px;
     color: black;
     font-size: 30px;
     font-weight: 600;
+
 }
 .package-part i{
    height: 25px;
    width: 25px;
-   color: gray;
-}
-/* .different-part{
-    background: #3F87F5;
-    box-shadow: 0px 42px 34px rgba(63, 135, 245, 0.25);
-    border-radius: 25px;
-    padding: 30px 10px;
-}
-.different-part h2, h4{
-    color: white;
-} */
+  }
+
 .package-button{
 border: none;
 padding: 10px 60px;
@@ -57,23 +50,85 @@ background-color: #f1dfea;
 font-weight: 600;
 margin-left: 5px;
 }
-.package-part{
-    border-radius: 5px;
+.package-title, .client-title{
+font-weight: 600;
+font-size: 38px;
+text-align: center;
+margin-top: 30px;
+margin-bottom: 50px;
+
+
+}
+.package-cart{
+    width: 225px;
+    /* height: 387px; */
+    padding: 25px 2px 5px 5px;
    
 }
-.package-part:hover{
-    background-color: #3F87F5;
-    margin-top: -25px;
-    color: white;
-    padding: 10px;
+.package-cart h2{
+    font-weight: 700;
+font-size: 36px;
+line-height: 46px;
 }
-/* .d-button{
-    border: none;
-padding: 10px 60px;
-border-radius: 25px;
-color: #3F87F5;
-background-color: white;
-font-weight: 600;
-margin-left: 15px;
+.package-cart h4{
+    font-weight: 700;
+font-size: 28px;
+line-height: 33px;
+}
+.package-cart p{
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 15px;
+}
+.package-cart:hover{
+    background: #3F87F5;
+    box-shadow: 0px 42px 34px rgba(63, 135, 245, 0.25);
+    border-radius: 25px;
+    color: white;
+    margin-top: -30px;
+   }
+/* client style */
 
-} */
+.client-card{
+    /* border:  1px solid firebrick; */
+    text-align: center;
+    padding: 20px 30px;
+    margin-right: 20px;
+}
+.client-card p{
+    padding: 20px 40px;
+}
+.client-card h4{
+    padding-top: 20px ;
+}
+.bg-footer{
+    background: #0B0D17;
+    height: 280px;
+}
+.footer{
+    color: white;
+   margin-left: 70px;
+   margin-top: 120px;
+}
+.link i{
+    color: white;
+   
+   
+}
+button{
+    background-color:#0B0D17 ;
+    padding: 10px 30px;
+    border: 1px solid white;
+    border-radius: 10px;
+}
+.link a{
+text-decoration: none;
+color: white;
+
+}
+.link{
+    width: 200px;
+    height: 100px;
+    margin-top: 70px;
+    margin-left: 260px;
+}
