--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
-
+body{
+    margin: 0;
+    padding: 0;
+}
 nav a{
     font-size: 24px;
     font-weight: 500;
@@ -110,25 +113,25 @@ line-height: 33px;
    margin-left: 70px;
    margin-top: 120px;
 }
-.link i{
+/* .link i{
     color: white;
    
    
-}
+} */
 button{
     background-color:#0B0D17 ;
     padding: 10px 30px;
     border: 1px solid white;
     border-radius: 10px;
 }
-.link a{
+.footer-btn a,i{
 text-decoration: none;
 color: white;
 
 }
-.link{
-    width: 200px;
-    height: 100px;
+.footer-btn{
+    /* width: 200px;
+    height: 100px; */
     margin-top: 70px;
-    margin-left: 260px;
+    margin-left: 240px;
 }
